--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ Django==5.0
 sqlparse==0.4.4
 tzdata==2024.1
 mysqlclient==2.2.4
+pip install django-cors-headers
+
+axios
+react-router-dom
+redux
+react-redux
+
