--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.5",
     "react-qr-code": "^2.0.12",
     "react-razorpay": "^2.0.1",
     "react-redux": "^9.1.0",
