--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,35 @@
-asgiref==3.8.1
-Django==5.0
-sqlparse==0.4.4
-tzdata==2024.1
-mysqlclient==2.2.4
-pip install django-cors-headers
+# Backend
+asgiref                       3.8.1
+certifi                       2024.2.2
+charset-normalizer            3.3.2
+Django                        5.0
+django-cors-headers           4.3.1
+djangorestframework           3.15.1
+djangorestframework-simplejwt 5.3.1
+idna                          3.6
+mysqlclient                   2.2.4
+pillow                        10.2.0
+pip                           23.2.1
+PyJWT                         2.8.0
+razorpay                      1.4.2
+requests                      2.31.0
+setuptools                    69.2.0
+sqlparse                      0.4.4
+tzdata                        2024.1
+urllib3                       2.2.1
 
+# Frontend
+cors
+html2canvas": "^1.4.1",
+    "jspdf
+react-router-dom
+react-qr-code
+@emailjs/browser": "^4.3.3",
+"@reduxjs/toolkit
 axios
 react-router-dom
 redux
 react-redux
+react-multi-carousel
+react-razorpay
 
